@@ -1,3 +1,9 @@
+2010-05-27  Gustavo Noronha Silva  <gns@gnome.org>
+
+        Final make distcheck fix - clean up generated GDOM files on distclean.
+
+        * GNUmakefile.am:
+
 2010-05-27  Xan Lopez  <xlopez@igalia.com>
 
         More GTK+ distcheck fixes.
